<resources>
    <string name="app_name">EphuApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_inventory_tasks">Tareas de Inventario</string>
    <string name="menu_recount_tasks">Tareas de Reconteo</string>
    <string name="menu_cert_tasks">Tareas de Certificacion</string>
    <string name="sync_master">Sincronizar Maestro</string>
    <string name="demo_date">2021/04/27</string>
    <string name="demo_long_date">27 de Abril de 2021</string>
    <string name="demo_number">15116</string>
    <string name="demo_task_resume_line">Lineas (3)   20:30:45</string>
    <string name="demo_task_title_line">TC # 515151</string>
    <string name="task_list_title">%1$s (%2$d tareas)</string>
    <string name="inventory_task_title">TI # %1$d - %2$d</string>
    <string name="certification_task_title">TC # %1$d - %2$d</string>
    <string name="recount_task_title">TR # %1$d - %2$d</string>
    <string name="task_resume">Lineas (%1$d) %2$s</string>
    <string name="base_url">Url de servicio</string>
    <string name="base_url_hint">Establece la url del proveedor de datos</string>
    <string name="data_origin">Origen de datos</string>
    <string name="warning">Advertencia</string>
    <string name="user_denied_permission_msg">Al denegar estos permisos la aplicacion no podra funcionar correctamente</string>
    <string name="user_disabled_permission_msg">Usted tiene desactivados ciertos permisos importantes. Por favor revise en la configuracion de la aplicacion</string>
    <string name="start">iniciar</string>
    <string name="pause">pausar</string>
    <string name="finalize">finalizar</string>
    <string name="resume">reanudar</string>
    <string name="title_activity_count">CountActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="done">HECHO</string>
    <string name="demo_task_code">P11-3-50</string>
    <string name="demo_task_pagination">2 de 2</string>
    <string name="sku">SKU</string>
    <string name="description">Descripcion</string>
    <string name="quantity">Cantidad</string>
    <string name="quant">Cant</string>
    <string name="inventory">Inventario %1$d</string>
    <string name="_inventory">Inventario</string>
    <string name="error">Error</string>
    <string name="skiped_intro_permissions">Necesita conceder los permisos requeridos para poder continuar</string>
    <string name="information">Informacion</string>
    <string name="empy_or_null_task_lines">Lineas de tareas inexistentes</string>
    <string name="not_more_items">No hay mas items</string>
    <string name="location_pagination">%1$d de %2$d</string>
    <string name="sku_not_found">SKU no encontrado</string>
    <string name="invalid_item">Item invalido</string>
    <string name="not_more_locations">No hay mas ubicaciones</string>
    <string name="invalid_item_count">Conteo Invalido</string>
    <string name="demo_sku">044306</string>
    <string name="demo_description">GALLETAS OREO 11 x 50</string>
    <string name="demo_quantity">12</string>
    <string name="counts">Conteos: %1$d</string>
    <string name="confirmation">Confirmacion</string>
    <string name="save_count_confirm_msg">Esta seguro de contar %1$.2f unidades de %2$s</string>
    <string name="delete_count_confirm_msg">Esta seguro de eliminar este conteo?</string>
    <string name="device_id">ID de dispositivo</string>
    <string name="device_information">Informacion de Dispositivo</string>
    <string name="device_id_hint">Suministre este ID a su proveedor de datos</string>
    <string name="demo_locations_label">Ubicaciones sincronizadas: 5</string>
    <string name="demo_synced_data_label">0 tareas y 0 items</string>
    <string name="synced_data_label">%1$d tareas y %2$d items</string>
    <string name="demo_skus_label">Items sincronizados: 450</string>
    <string name="demo_last_sync_date">unsynced</string>
    <string name="last_sync_date">%1$s</string>
    <string name="barcode_scanner_error">Error al escanear codigo de barras</string>
    <string name="next_task">Siguiente Tarea</string>
    <string name="previous_task">Tarea Anterior</string>
    <string name="barcode_scanner">Escanear Codigo</string>
    <string name="not_more_tasks">No hay mas tareas</string>
    <string name="save_all_counts">GUARDAR TODOS LOS CONTEOS (%1$d)</string>
    <string name="total_counts">Total Conteos: %1$d</string>
    <string name="total_task_counts">Total conteos de la tarea: %1$d</string>
    <string name="save_pending_counts">GUARDAR PENDIENTES (%1$d)</string>
    <string name="save_task_pending_counts">GUARDAR PENDIENTES DE LA TAREA (%1$d)</string>
    <string name="empty_owner_error_msg">Owner recibido es invalido</string>
    <string name="device_data_empty_error_msg">Los datos del dispositivo no pudieron ser obtenidos</string>
    <string name="lot">Lote</string>
    <string name="lpn">Lpn</string>
    <string name="created_date">Fecha Creacion</string>
    <string name="expiry_date">Fecha Expiracion</string>
    <string name="serial">Serial</string>
    <string name="empty">Vacio</string>
    <string name="multireference">Multi Referencia</string>
    <string name="counts_uploaded_successfully">Conteos subidos correctamente</string>
    <string name="counts_uploaded_successfully_error_on_local_update">Conteos subidos correctamente. Error al actualizar registros locales</string>
    <string name="items">Items</string>
    <string name="last_synced_items">%1$d items sincronizados</string>
    <string name="last_synced_date">Ultima actualizacion: %1$s</string>
    <string name="last_pending_counts_revision">Ultima revision: %1$s</string>
    <string name="sync_now">Sync</string>
    <string name="tasks">Tareas</string>
    <string name="last_synced_tasks">%1$d tareas sincronizadas</string>
    <string name="pending_counts">%1$d conteos pendientes (%2$d erroneos)</string>
    <string name="sync_all">Sincronizar Todo</string>
    <string name="parameters">Parametros</string>
    <string name="adding_new_count">Agregando nuevo conteo</string>
    <string name="editing_count">Editando conteo</string>
    <string name="edit_count_confirmation_msg">Esta seguro de editar este conteo?</string>
    <string name="you_are_editing_error">Finalice la edicion primero</string>
    <string name="error_fetching_remote_tasks">Error al obtener tareas del servidor remoto</string>
    <string name="error_fetching_remote_items">Error al obtener items del servidor</string>
    <string name="error_fetching_remote_locations">Error al obtener ubicaciones desde el servidor</string>
    <string name="error_uploading_counts">Error al subir conteos al servidor</string>
    <string name="error_uploading_count">Error al subir conteo al servidor</string>
    <string name="counts_uploading_cancelled">Subida de conteos cancelada</string>
    <string name="uploading_counts">Subiendo conteos al servidor…</string>
    <string name="fail_sending_counts">Fallo el envio de conteos. Intentos agotados</string>
    <string name="no_data_received">No se recibieron datos</string>
    <string name="save_all_counts_confirm_msg">Esta seguro de guardar todos los conteos registrados pendientes por subir?</string>
    <string name="cancel">cancelar</string>
    <string name="accept">accept</string>
    <string name="error_editing_not_uploaded_count">Este conteo no puede ser editado. Necesita guardarlo primero</string>
    <string name="error_saving_edit_count">Error al guardar la edicion del conteo</string>
    <string name="edit_count_uploaded_successfully">Edicion de conteo guardada satisfactoriamente</string>
    <string name="new_count_added_by_edit">Nuevo conteo agregado tras editar otro</string>
    <string name="count_edited_successfully">Conteo editado correctamente</string>
    <string name="uploading_count_edit">Subiendo edicion de conteo</string>
    <string name="error_trying_to_pause_task">Esta tarea no puede ser pausada</string>
    <string name="error_trying_to_init_resume">Esta tarea no se puede iniciar o resumir</string>
    <string name="changing_task_state">Solicitando cambio de estado de tarea…</string>
    <string name="state_changed_successfully">Cambio de estado realizado con exito</string>
    <string name="error_changing_task_state">Error al cambiar estado de la tarea</string>
    <string name="state_change_cancelled">Solicitud de cambio de estado cancelada</string>
    <string name="error_deleting_not_uploaded_count">Este conteo no puede ser eliminado del servidor</string>
    <string name="error_deleting_count">Error al intentar eliminar este conteo</string>
    <string name="without_description">Sin Descripcion</string>
    <string name="without_sku">Sin Sku</string>
    <string name="mark_empty_location">Marcar esta ubicacion como vacia</string>
    <string name="set_location_empty_confirm_msg">Esta seguro de marcar esta ubicacion como vacia?</string>
    <string name="set_location_not_empty_confirm_msg">Esta seguro de marcar esta ubicacion como no vacia? Debe registrar al menos un conteo para que este cambio tome efecto</string>
    <string name="epty_location_msg">Esta ubicacion fue marcada como vacia</string>
    <string name="export">Export</string>
    <string name="local_database">Base de datos local</string>
    <string name="last_exported">Ultima exportacion: %1$s</string>
    <string name="never">Nunca</string>
    <string name="unknown">Desconocido</string>
    <string name="unknown_tasktype">Tarea Desconocida</string>
    <string name="demo_db_path">data/0/user/databases/db_ephu.db</string>
    <string name="device">Dispositivo</string>
    <string name="device_synced">Dispositivo sincronizado: %1$s</string>
    <string name="owner">Propietario: %1$s</string>
    <string name="demo_device_id">15sdf51sf5sg4sf</string>
    <string name="demo_packaging">PAQUETE 60 UNIDADES</string>
    <string name="packagin">%1$s de %2$d %3$s</string>
    <string name="select_a_recount">Seleccione un reconteo</string>
    <string name="editing_recount">Editando Reconteo</string>
    <string name="menu_tasks">Tareas</string>
    <string name="error_exporting_db">Error exportando archivo de BD</string>
    <string name="db_exported">DB exportada con exito!</string>
    <string name="menu_counts">Conteos</string>
    <string name="title_scan">Escanear</string>
    <string name="title_pending">Pendiente</string>
    <string name="title_resume">Resume</string>
    <string name="title_scanned">Escaneado</string>
</resources>