<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="device_information"
        android:title="@string/device_information">
        <EditTextPreference
            android:visibility="visible"
            android:key="device_id"
            android:enabled="false"
            app:useSimpleSummaryProvider="true"
            android:title="@string/device_id"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="data_origin"
        android:title="@string/data_origin">
        <EditTextPreference
            android:visibility="visible"
            android:key="base_url"
            app:useSimpleSummaryProvider="true"
            android:title="@string/base_url" />
    </PreferenceCategory>
</PreferenceScreen>