<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:iconTint="@color/black"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_scanned"
        android:icon="@drawable/ic_appintro_done"
        android:iconTint="@color/black"
        android:title="@string/title_scanned" />
    <item
        android:id="@+id/navigation_pending"
        android:icon="@drawable/ic_baseline_schedule_24"
        android:iconTint="@color/black"
        android:title="@string/title_pending" />
    <item
        android:id="@+id/navigation_resume"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:iconTint="@color/black"
        android:title="@string/title_resume" />
</menu>