<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inventory_tasks">

    <fragment
        android:id="@+id/nav_inventory_tasks"
        android:name="com.tau.ephuapp.activities.main.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_counts"
        android:name="com.tau.ephuapp.activities.main.ui.counts.CountsFragment"
        android:label="@string/menu_counts"
        tools:layout="@layout/fragment_counts" />

    <fragment
        android:id="@+id/nav_cert_tasks"
        android:name="com.tau.ephuapp.activities.main.ui.certificate.CertificationTasksFragment"
        android:label="@string/menu_cert_tasks"
        tools:layout="@layout/fragment_cert_tasks" />

    <fragment
        android:id="@+id/nav_sync_master"
        android:name="com.tau.ephuapp.activities.main.ui.sync_master.SyncMasterFragment"
        android:label="@string/sync_master"
        tools:layout="@layout/fragment_sync_master" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.tau.ephuapp.activities.main.ui.settings.SettingsFragment"
        android:label="@string/action_settings" />
</navigation>