<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_baseline_playlist_add_check_24"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_cert_tasks"
            android:icon="@android:drawable/ic_secure"
            android:title="@string/menu_cert_tasks"
            android:visible="false" />
        <item
            android:id="@+id/nav_sync_master"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/sync_master" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/action_settings" />
    </group>
</menu>