<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.ui.sync_master.SyncMasterFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBarSync"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemsTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/items"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBarSync" />

            <TextView
                android:id="@+id/totalItemsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_synced_items"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/itemsTitleTv"
                app:layout_constraintTop_toBottomOf="@+id/itemsTitleTv" />

            <TextView
                android:id="@+id/itemLastSyncTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/last_synced_date"
                app:drawableLeftCompat="@drawable/ic_baseline_sync_24"
                app:layout_constraintStart_toStartOf="@+id/totalItemsTv"
                app:layout_constraintTop_toBottomOf="@+id/totalItemsTv" />

            <Button
                android:id="@+id/syncItemsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/sync_now"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/itemsTitleTv" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemLastSyncTv" />

            <TextView
                android:id="@+id/tasksTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/tasks"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider2" />

            <TextView
                android:id="@+id/totalTasksTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_synced_tasks"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/itemsTitleTv"
                app:layout_constraintTop_toBottomOf="@id/tasksTitleTv" />

            <TextView
                android:id="@+id/tasksLastSyncTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/last_synced_date"
                app:drawableLeftCompat="@drawable/ic_baseline_sync_24"
                app:layout_constraintStart_toStartOf="@+id/totalItemsTv"
                app:layout_constraintTop_toBottomOf="@id/totalTasksTv" />

            <Button
                android:id="@+id/syncTasksBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/sync_now"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tasksTitleTv" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tasksLastSyncTv" />

            <TextView
                android:id="@+id/bdTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/local_database"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider3" />

            <TextView
                android:id="@+id/bdPathTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/totalItemsTv"
                app:layout_constraintTop_toBottomOf="@id/bdLastExportTv"
                tools:text="@string/demo_db_path" />

            <Button
                android:id="@+id/bdExportBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="148dp"
                android:layout_marginEnd="16dp"
                android:text="@string/export"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tasksTitleTv" />

            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="180dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tasksLastSyncTv" />

            <TextView
                android:id="@+id/bdLastExportTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_exported"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/itemsTitleTv"
                app:layout_constraintTop_toBottomOf="@id/bdTitleTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/syncAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/sync_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </LinearLayout>
</ScrollView>