<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemCard"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/deleteBtn"
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/quantityTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/quantityTv"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/demo_description"
            app:layout_constraintEnd_toStartOf="@+id/quantityTv"
            app:layout_constraintStart_toEndOf="@+id/skuTv"
            app:layout_constraintTop_toTopOf="@+id/skuTv" />

        <TextView
            android:id="@+id/skuTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/demo_sku"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantityTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/demo_quantity"
            app:layout_constraintBottom_toBottomOf="@+id/descriptionTv"
            app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
            app:layout_constraintTop_toTopOf="@+id/descriptionTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>